<resources>

    <string name="app_name">Parrot</string>
    <string name="splash_name">Parrot</string>

    <!-- Login Screen -->
    <string name="login_button">Entrar</string>
    <string name="login_email">Email</string>
    <string name="login_password">Senha</string>
    <string name="login_cadastro">Ainda nao tem conta?</string>

    <!-- Register Screen -->
    <string name="register_name">Nome</string>
    <string name="register_email">Email</string>
    <string name="register_password">Senha</string>
    <string name="register_confirm_password">Confirmar Senha</string>
    <string name="register_toolBar_name">Cadastro</string>
    <string name="register_button">Finalizar</string>

    <!-- Toolbar regiter screnn -->
    <string name="back_icon">Voltar</string>

    <!-- Main Screen -->
    <string name="main_toolBar_name">Contatos</string>
    <string name="AddContactFragment">Novo Contato</string>
    <string name="menu_item">Sair</string>
    <string name="alert_logout_title">Deseja realmente sair da sua conta?</string>
    <string name="alert_logout_cancel">CANCELAR</string>
    <string name="alert_logout_confirm">CONFIRMAR</string>
    <string name="empty_list">Adicione novos contatos</string>

    <!-- add new contact screen -->
    <string name="add_new_toolbar_name">Novo Contato</string>
    <string name="add_new_text_input_name">Nome</string>
    <string name="add_new_text_input_email">Email</string>
    <string name="add_new_text_input_phone">Telefone</string>
    <string name="add_new_button">Criar</string>

    <!-- contact screen -->
    <string name="contact_toolbar_name">Contato</string>

    <!-- contact detail -->
    <string name="contact_detail_name_toolbar">Contato</string>
    <string name="alert_dialog_title">Deseja realmente confirma a exclusao do contato?</string>
    <string name="alert_dialog_positive">CONFIRMAR</string>
    <string name="alert_dialog_negative">CANCELAR</string>

    <!-- edit contact -->
    <string name="contact_edit_name_toolbar">Editar Contato</string>
    <string name="contact_edit_button_save">Salvar</string>
    <string name="contact_edit_button_cancel">Cancelar</string>

    <!-- menu contact -->
    <string name="ic_delete_title">Apagar contato</string>
    <string name="ic_edit_title">Editar</string>

    <!-- Input error message -->
    <string name="isBlankError">Campo obrigatório</string>
    <string name="password_deference">Senhas não conferem</string>

</resources>